# coeus-ci

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.sh
coeus/: __init__.py  __main__.py  cli.py  core.py  matching.py  models.py  report.py  scorer.py  web.py
coeus/modules/: __init__.py  base.py  dba.py  dns_mod.py  edgar.py  headers.py  nonprofit.py  ssl_mod.py  tech.py  whois_mod.py
templates/: dashboard.html  report.html
testing/: TEST_SUMMARY.md
tests/: conftest.py  test_cli.py  test_core.py  test_matching.py  test_models.py  test_module_dba.py  test_module_dns.py  test_module_edgar.py  test_module_headers.py  test_module_nonprofit.py  test_module_ssl.py  test_module_tech.py  test_module_whois.py  test_report.py  test_scorer.py  test_web.py
